package AppInterface;
import java.util.Scanner;
public class Menu {
Scanner input = new Scanner(System.in);











}
