package ParkingGarage;

public class ParkingRecord {
}
