@startuml ParkingGarageManager

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #555555

' =====================
' ABSTRACT: PERSON
' =====================

abstract class Person {
  - name: String
  + getName(): String
  + displayRole(): void {abstract}
}

' =====================
' EMPLOYEE
' =====================

class Employee {
  - employeeId: int
  - role: String
  + getEmployeeId(): int
  + getRole(): String
  + setRole(role: String): void
  + trackEntry(vehicle: Vehicle): void
  + trackExit(vehicle: Vehicle): void
  + checkRegistration(vehicle: Vehicle): boolean
  + calculateExpense(vehicle: Vehicle): double
  + displayRole(): void
}

' =====================
' USER
' =====================

class User {
  - userId: int
  - email: String
  - vehicles: List<Vehicle>
  + getUserId(): int
  + getEmail(): String
  + registerVehicle(vehicle: Vehicle): void
  + updateVehicleInfo(vehicle: Vehicle): void
  + removeVehicleFromAccount(vehicle: Vehicle): void
  + viewAvailableSpaces(): int
  + displayRole(): void
}

' =====================
' ABSTRACT: VEHICLE
' =====================

abstract class Vehicle {
  - licensePlate: String
  - model: String
  - brand: String
  - year: int
  - color: String
  - type: String
  - isRegistered: boolean
  - timeSpent: double
  - timeLeft: double
  + getLicensePlate(): String
  + getModel(): String
  + getBrand(): String
  + getYear(): int
  + getColor(): String
  + getType(): String
  + isRegistered(): boolean
  + getTimeSpent(): double
  + getTimeLeft(): double
  + setLicensePlate(plate: String): void
  + setRegistered(registered: boolean): void
  + setType(type: String): void
  + setTimeSpent(time: double): void
  + setTimeLeft(time: double): void
  + displayVehicleInfo(): void {abstract}
  + displayTimeInfo(): void {abstract}
}

' =====================
' VEHICLE CHILDREN
' =====================

class Car {
  + displayVehicleInfo(): void
  + displayTimeInfo(): void
}

class Motorbike {
  + displayVehicleInfo(): void
  + displayTimeInfo(): void
}

class SUV {
  + displayVehicleInfo(): void
  + displayTimeInfo(): void
}

class Truck {
  + displayVehicleInfo(): void
  + displayTimeInfo(): void
}

' =====================
' PARKING SPOT (Generic)
' =====================

class "ParkingSpot<T extends Vehicle>" {
  - vehicle: T
  - type: String
  + ParkingSpot(type: String)
  + isEmpty(): boolean
  + canFit(vehicle: Vehicle): boolean
  + park(vehicle: Vehicle): void
  + removeVehicle(): void
  + getVehicle(): T
  + getType(): String
}

' =====================
' PARKING GARAGE
' =====================

class ParkingGarage {
  - spots: ParkingSpot[]
  - carOccupiedSpaces: int
  - motoOccupiedSpaces: int
  - suvOccupiedSpaces: int
  - truckOccupiedSpaces: int
  + ParkingGarage()
  + parkVehicle(vehicle: Vehicle): void
  + removeVehicle(licensePlate: String): void
  + getAvailableSpaces(type: String): int
  + getOccupiedSpaces(type: String): int
  + printCurrentVehiclesInLot(): void
}

' =====================
' PARKING RECORD
' =====================

class ParkingRecord {
  - recordId: int
  - entryTime: LocalDateTime
  - exitTime: LocalDateTime
  - cost: double
  + calculateParkingDuration(): double
  + calculateExpense(vehicle: Vehicle): double
}

' =====================
' MENU
' =====================

class Menu {
  - input: Scanner
  - user: User
  - employee: Employee
  - garage: ParkingGarage
  + start(): void
  + displayOptions(): void
  + displayCustomerMenu(): void
  + displayEmployeeMenu(): void
}

' =====================
' CUSTOM EXCEPTIONS
' =====================

class GarageFullException {
  + GarageFullException(message: String)
}

class VehicleNotFoundException {
  + VehicleNotFoundException(message: String)
}

class InvalidVehicleTypeException {
  + InvalidVehicleTypeException(message: String)
}

' =====================
' INHERITANCE
' =====================

Person <|-- Employee
Person <|-- User
Vehicle <|-- Car
Vehicle <|-- Motorbike
Vehicle <|-- SUV
Vehicle <|-- Truck

' =====================
' ASSOCIATIONS
' =====================

Menu --> User
Menu --> Employee
Menu --> ParkingGarage
Employee --> ParkingGarage
Employee --> Vehicle
User --> Vehicle
ParkingGarage --> "ParkingSpot<T extends Vehicle>"
"ParkingSpot<T extends Vehicle>" --> Vehicle
Vehicle --> ParkingRecord

@enduml
